[package]
name = "motor-v3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
bytes = "1.5.0"
embedded-hal = "0.2.7"
futures = "0.3.28"
futures-sink = "0.3.28"
rppal = { version = "0.14.1", features = ["hal"] }
thiserror = "1.0.49"
tokio = { version = "1.33.0", features = ["full"] }
tokio-serial = { version = "5.4.4", features = ["codec"] }
tokio-util = { version = "0.7.9", features = ["codec"] }
